2023-10-18_docker_tieto/kubernetes-example/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tieto
spec:
  selector:
    app: tieto
  ports:
    - port: 80
      targetPort: 8000
