2023-10-18_docker_tieto/kubernetes-example/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tieto
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - tieto.k8s.sikademo.com
      secretName: tieto-tls
  rules:
    - host: tieto.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tieto
                port:
                  number: 80
